# jp-work-histroy-builder

./: .dockerignore  .gitignore  AGENT.md  Dockerfile  Makefile  README.md  pyproject.toml
.claude/skills/resume/: SKILL.md
.claude/skills/resume/references/: yaml-schema.md
.claude/skills/work-history/: SKILL.md
.claude/skills/work-history/references/: yaml-schema.md
fonts/: README.md
sample/: credential.yaml  data.yaml  resume.yaml  work_history_standard.yaml  work_history_star.yaml
src/jb_workhistory/: __init__.py  __main__.py  builder.py  cli.py  loader.py  styles.py
src/jb_workhistory/resume/: builder.py  loader.py
src/jb_workhistory/work_history/: builder.py  loader.py  models.py
src/jp_tenshoku_docs_builder/: __init__.py  __main__.py  cli.py  fonts.py
src/jp_tenshoku_docs_builder/resume/: builder.py  loader.py  models.py
src/jp_tenshoku_docs_builder/work_history/: builder.py  loader.py  models.py  styles.py
src/jpcv/: __init__.py  __main__.py  builder.py  cli.py  loader.py  models.py  styles.py
tests/: test_models.py  test_resume_models.py
